<resources>
    <string name="app_name">Notas y tareas </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Contenido</string>
    <string name="clip">clip</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="lblFecha">fecha</string>
    <string name="textHora">Hora</string>
    <string name="textFecha">Fecha</string>
    <string name="textNota">Nota</string>
    <string name="textTarea">Tarea</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>