<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:id="@+id/toggleCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:textOff="Incompleta"
            android:textOn="Completada"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/textNota"
            android:textOn="@string/textTarea"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginTop="40dp"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="400dp"
            android:layout_height="380dp"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:hint="@string/descripcion"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="95dp"
            android:clickable="true"
            android:contentDescription="@string/clip"
            android:focusable="true"
            android:src="@drawable/remind"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/clip"
            android:focusable="true"
            android:src="@drawable/addimage"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/save"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginBottom="88dp"
            android:text="@string/guardar"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReminders"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cancelar"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintHorizontal_bias="0.672"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>