<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:elevation="5sp"
        app:cardBackgroundColor="@color/purple_500"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:maxLength="40"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:text="@string/lblFecha"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblFecha"
                app:srcCompat="@drawable/trash" />

            <TextView
                android:id="@+id/lblContenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:maxLength="80"
                android:paddingStart="10sp"
                android:paddingLeft="10sp"
                android:paddingTop="5sp"
                android:paddingEnd="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="5sp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toBottomOf="@+id/lblTitulo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
