<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Recordatorios">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginTop="40dp"
            android:focusable="false"
            android:hint="@string/titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="409dp"
            android:layout_height="101dp"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:hint="@string/descripcion"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="Fecha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="Hora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <EditText
            android:id="@+id/txtHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/hour"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtHour2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hour"
            app:layout_constraintTop_toTopOf="@+id/hour"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/saveAlarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>